--- a/src/GeocodeSharp.Tests/GeocodeSharp.Tests.csproj
+++ b/src/GeocodeSharp.Tests/GeocodeSharp.Tests.csproj
@@ -34,6 +34,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
@@ -53,7 +59,9 @@
     <Compile Include="Google\GeocodeClientTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="key.snk" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GeocodeSharp\GeocodeSharp.csproj">
       <Project>{b16bcfa3-57cf-407a-abd3-e46756673f67}</Project>
