--- a/src/GeocodeSharp/GeocodeSharp.csproj
+++ b/src/GeocodeSharp/GeocodeSharp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Google\GeoCoordinate.cs" />
     <Compile Include="Google\Geometry.cs" />
     <Compile Include="Google\GeoViewport.cs" />
+    <Compile Include="Google\IGeocodeClient.cs" />
     <Compile Include="Google\LocationType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
