--- a/src/GeocodeSharp/GeocodeSharp.nuspec
+++ b/src/GeocodeSharp/GeocodeSharp.nuspec
@@ -11,7 +11,7 @@
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Intial release.</releaseNotes>
+    <releaseNotes>Added interface to facility mocks.</releaseNotes>
     <copyright>Copyright 2014</copyright>
     <tags>Geocode Address Maps Geo</tags>
   </metadata>
