Updated version for new publication

--- a/src/GeocodeSharp/GeocodeSharp.nuspec
+++ b/src/GeocodeSharp/GeocodeSharp.nuspec
@@ -2,17 +2,20 @@
 <package >
   <metadata>
     <id>GeocodeSharp</id>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
     <title>Async Google Geocode API for .NET</title>
-    <authors>Brandon Cuff</authors>
+    <authors>Brandon Cuff, alexinspire, Johan Nilsson</authors>
     <owners>Brandon Cuff</owners>
     <licenseUrl>https://github.com/bcuff/GeocodeSharp/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/bcuff/GeocodeSharp</projectUrl>
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>An async wrapper of the Google Geocode API for .NET</description>
-    <releaseNotes>Added ability to use API key</releaseNotes>
+    <releaseNotes>Added support for the region parameter.</releaseNotes>
     <copyright>Copyright 2014</copyright>
     <tags>Geocode Address Maps Geo</tags>
+    <dependencies>
+      <dependency id="Newtonsoft.Json" version="6.0.5" />
+    </dependencies>
   </metadata>
 </package>
