Added test for status serialization

--- a/src/GeocodeSharp.Tests/GeocodeSharp.Tests.csproj
+++ b/src/GeocodeSharp.Tests/GeocodeSharp.Tests.csproj
@@ -41,6 +41,11 @@
     <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.5\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -57,10 +62,12 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Google\GeocodeClientTest.cs" />
+    <Compile Include="Google\GeocodeResponseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="key.snk" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GeocodeSharp\GeocodeSharp.csproj">
