feat/20 Add System.Text.Json reference

--- a/src/GeocodeSharp.Tests/GeocodeSharp.Tests.csproj
+++ b/src/GeocodeSharp.Tests/GeocodeSharp.Tests.csproj
@@ -4,6 +4,7 @@
     <Copyright>Copyright ©  2014</Copyright>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="4.6.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
