--- a/src/GeocodeSharp/GeocodeSharp.csproj
+++ b/src/GeocodeSharp/GeocodeSharp.csproj
@@ -9,5 +9,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="[13.0.1,]" />
+    <PackageReference Include="System.Text.Json" Version="4.6.0" />
   </ItemGroup>
 </Project>
